# game-comment-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
docs/: PROGRESS.md
docs/plans/: 2026-03-11-game-comment-scraper.md
scripts/: adapter_scrape.py  debug_50.py  debug_time.py  debug_time2.py  debug_time3.py  debug_time4.py  explore_oppo_ui.py  explore_oppo_ui_v2.py  extract_comments_debug.py  final_scrape_10.py  init_device.py  query.py  scrape.py  scrape_10.py  scrape_100_comments.py  scrape_50.py  scrape_n.py  scrape_to_excel.py  test_huawei_adapter.py  test_huawei_implementation.py  test_huawei_v2.py  test_oppo.py  test_vivo.py
src/adapters/: __init__.py  base.py  huawei.py  oppo.py  vivo.py  xiaomi.py
src/device/: __init__.py  connector.py
src/models/: __init__.py  comment.py
src/scraper/: __init__.py  collector.py
src/storage/: __init__.py  repository.py
tests/: test_huawei_adapter.py  test_huawei_integration.py
