[project]
name = "game-comment-scraper"
version = "0.1.0"
description = "Game comment scraper from Chinese app stores"
requires-python = ">=3.10"
dependencies = [
    "uiautomator2>=2.16.0",
    "pillow>=10.0.0",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
